--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       const birthplace = document.getElementById("birthplace").value;
       const thoughts = document.getElementById("thoughts").value;
 
-      const correctName = "John Doe";
-      const correctDOB = "2000-01-01";
-      const correctBirthplace = "New York";
+      const correctName = "Balvinder Kumar";
+      const correctDOB = "1997-07-13";
+      const correctBirthplace = "Ludhiana";
 
       const isMatch = name.toLowerCase() === correctName.toLowerCase() &&
                       dob === correctDOB &&
@@ -79,11 +79,11 @@
       `;
 
       // Optional logging to Google Sheet
-      fetch("YOUR_GOOGLE_SCRIPT_URL", {
+      fetch("https://script.google.com/macros/library/d/1JV--14YyuiYjXevcrJG9xOPt5Aa37xf9nQOPa-ysi9jzaFDMjzVwNeLs/1", {
         method: "POST",
         body: JSON.stringify({ name, dob, birthplace, thoughts }),
         headers: { "Content-Type": "application/json" }
-      });
+      } );
     }
   </script>
 </body>
