Initial love checker

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         body: JSON.stringify({ name, dob, birthplace, thoughts }),
         headers: { "Content-Type": "application/json" }
       } );
-    }
+    }//http
   </script>
 </body>
 </html>
